--- a/style.css
+++ b/style.css
@@ -74,18 +74,29 @@ body {
 }
 
 #fullscreen-btn {
-    background-color: #00008B;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    position: relative;
+    display: inline-block;
+    margin: 15px;
+    padding: 15px 30px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #725AC1;
+    background: transparent;
     cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: ease-out 0.5s;
+    border: 2px solid #725AC1;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 0 #725AC1;
 }
 
 #fullscreen-btn:hover {
-    background-color: #000066;
-    transform: scale(1.05); /* Slightly enlarges the button on hover */
+    color: white;
+    box-shadow: inset 0 -100px 0 0 #725AC1;
+}
+#fullscreen-btn:active {
+    transform: scale(0.9);
 }
 
 /* Additional Global Styling */
