--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h2:hover
 }
 
 #fullscreen-btn:hover {
-    color: white;
+    color: black;
     box-shadow: inset 0 -100px 0 0 #00ff00;
 }
 #fullscreen-btn:active {
