--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
     font-family: 'Poppins', sans-serif;
 }
 body {
-    margin: 0;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     background-color: #000;
     color: #00ff00;
     font-family: 'Courier New', Courier, monospace;
@@ -21,7 +21,7 @@ h2
 {
     font-size: 3em;
     font-weight: 500;
-    color: #222;
+    color: #252424;
     letter-spacing: 5px;
     cursor: pointer;
 
@@ -38,48 +38,79 @@ h2:hover
 
 }
 /* Navigation Bar Styling */
-.navbar {
-    width: 100%;
-    background-color: #00008B; /* Dark blue color */
+.navbar{
+    display: flex;
+    background-color: rgb(8, 42, 156); 
     padding: 10px 0;
     text-align: center;
-    position: fixed; /* Keeps the navbar fixed at the top */
+    margin-top: 0px;
     top: 0;
-    z-index: 1000; /* Ensures the navbar stays on top */
+    position: fixed;
+    z-index: 0px;  /* Ensures the navbar stays on top */
+    /* border-radius: 10px;  */
+    width: 100%;
+    height: 45px; 
+    align-items: center;
+    justify-content: space-around;
+    transition: all 1s;
+    
 }
-
-.nav-menu {
+.navbar:hover{
+    width: 100%;
+    transition: all 1s;
+}
+.button {
+    background-color: transparent;
+    outline: 0 !important;
+    border: 0 !important;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
+  }
+  
+  .button:hover {
+    transform: translateY(-3px);
+  }
+  
+  .icon {
+    font-size: 20px;
+  }
+
+.button  {
+    margin: 0 8px;
 }
 
-.nav-menu li {
-    margin: 0 20px;
-}
-
-.nav-menu li a {
+/* .nav-menu li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
-}
+} */
 
-.nav-menu li a:hover {
+/* .nav-menu li a:hover {
     text-decoration: underline;
-    color: #ffcc00; /* Adds a color change on hover for better UX */
-}
+    color: #ffcc00; Adds a color change on hover for better UX
+} */
 
 /* Page Header Styling */
 .header {
     text-align: center;
-    margin-top: 120px; /* Adjusted to avoid overlap with navbar */
+    margin-top: 100px; /* Adjusted to avoid overlap with navbar */
     color: #fff;
     font-size: 24px;
 }
-
+ 
 /* Clock Styling */
 .clock {
     text-align: center;
@@ -104,7 +135,7 @@ h2:hover
     position: relative;
     display: inline-block;
     margin: 15px;
-    padding: 15px 30px;
+    padding: 10px 20px;
     text-align: center;
     font-size: 18px;
     letter-spacing: 1px;
