--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 h2 {
     font-size: 2em;
     font-weight: 500;
-    color: #252424;
+    color: #3cff00;
     letter-spacing: 5px;
     cursor: pointer;
 
